<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product">Products</string>
    <string name="payment">Payments</string>
    <string name="shopping">Shopping</string>
    <string name="submit">Submit</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="pin">Pincode</string>

    <string name="next">Next</string>

    <string name="skip">Skip</string>


</resources>